fix(avatar): disable tap highlights on iOS

--- a/packages/varlet-ui/src/avatar/avatar.less
+++ b/packages/varlet-ui/src/avatar/avatar.less
@@ -19,6 +19,7 @@
   border-radius: var(--avatar-border-radius);
   background-color: var(--avatar-background-color);
   transition: background-color 0.25s;
+  -webkit-tap-highlight-color: transparent;
 
   img {
     width: 100%;
